[gd_scene load_steps=16 format=2]

[ext_resource path="res://gameScenes/lvl3/images/bigRouteV2.png" type="Texture" id=1]
[ext_resource path="res://objects/station.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/railwayRoute.tscn" type="PackedScene" id=3]
[ext_resource path="res://UIScenes/MainUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/string2.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/string.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/string3.tscn" type="PackedScene" id=7]
[ext_resource path="res://gameScenes/lvl3/level3.gd" type="Script" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 430.311, 453.105, 0, 0, 0, 0, 279.441, 452.436, 0, 0, 0, 0, 197.81, 380.41, 0, 0, 0, 0, 197.81, 271.523, 0, 0, 0, 0, 206.384, 258.663, 0, 0, 0, 0, 219.245, 253.518, 0, 0, 0, 0, 326.417, 253.518 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 326.389, 253.841, 0, 0, 0, 0, 406.125, 179.754, 0, 0, 0, 0, 407.006, 135.741 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 283.409, 257.648, 0, 0, 0, 0, 355.258, 257.648 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 397.257, 253.648, 0, 0, 0, 0, 477.367, 328.001, 0, 0, 0, 0, 476.743, 361.776 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 397.593, 253.732, 0, 0, 0, 0, 688.638, 254.733 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 688.42, 255.119, 0, 0, 0, 0, 766.579, 328.441, 0, 0, 0, 0, 766.081, 364.149 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 645.122, 257.991, 0, 0, 0, 0, 757.904, 256.665, 0, 0, 0, 0, 769.845, 255.338, 0, 0, 0, 0, 779.133, 245.386, 0, 0, 0, 0, 784.441, 233.445, 0, 0, 0, 0, 783.114, 132.605, 0, 0, 0, 0, 701.513, 57.6377, 0, 0, 0, 0, 548.724, 57.7388 )
}

[node name="level3" type="Node2D"]
script = ExtResource( 8 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 43.8145
margin_top = -2.16382
margin_right = 1007.81
margin_bottom = 539.836
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainUI" parent="." instance=ExtResource( 4 )]

[node name="station1" parent="." instance=ExtResource( 2 )]
position = Vector2( 449.217, 453.64 )

[node name="station2" parent="." instance=ExtResource( 2 )]
position = Vector2( 407.414, 134.869 )

[node name="station3" parent="." instance=ExtResource( 2 )]
position = Vector2( 477.261, 374.802 )

[node name="station4" parent="." instance=ExtResource( 2 )]
position = Vector2( 766.421, 377.562 )

[node name="station5" parent="." instance=ExtResource( 2 )]
position = Vector2( 577.237, 53.7698 )

[node name="railwayRoute1" parent="." instance=ExtResource( 3 )]
curve = SubResource( 1 )

[node name="railwayRoute2" parent="." instance=ExtResource( 3 )]
curve = SubResource( 2 )

[node name="railwayRoute3" parent="." instance=ExtResource( 3 )]
position = Vector2( 43, -4 )
curve = SubResource( 3 )

[node name="railwayRoute4" parent="." instance=ExtResource( 3 )]
curve = SubResource( 4 )

[node name="railwayRoute5" parent="." instance=ExtResource( 3 )]
curve = SubResource( 5 )

[node name="railwayRoute6" parent="." instance=ExtResource( 3 )]
curve = SubResource( 6 )

[node name="railwayRoute7" parent="." instance=ExtResource( 3 )]
position = Vector2( 43, -2.97833 )
curve = SubResource( 7 )

[node name="string1" parent="." instance=ExtResource( 6 )]
margin_left = 313.149
margin_top = 238.17
margin_right = 325.149
margin_bottom = 258.17

[node name="string2" parent="." instance=ExtResource( 5 )]
margin_left = 381.714
margin_top = 238.889
margin_right = 393.714
margin_bottom = 258.889

[node name="string3" parent="." instance=ExtResource( 7 )]
margin_left = 672.377
margin_top = 238.325
margin_right = 684.377
margin_bottom = 258.325
